--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayobami Oye-Daniel</title>
     <style>
+            <link rel="stylesheet" type="text/css" href="styles.css">
         /* Add your CSS styles here */
         body {
             font-family: Arial, sans-serif;
